# final_challenge2025

./: package.xml  setup.cfg  setup.py
basement_point_publisher/: package.xml  setup.cfg  setup.py
basement_point_publisher/basement_point_publisher/: basement_point_publisher.py
final_challenge2025/: safety_controller.py
final_challenge2025/shrinkray_heist/: red_light_detector.py
launch/: safety.launch.xml
shrinkray_heist/: README.md  banana_detector.py  color_segmentation.py  heist_state_machine.py  red_light_detector.py  safety_controller.py
shrinkray_heist/launch/: banana_detector.launch.py  safety_controller.launch.xml
shrinkray_heist/path_planning/: hybrid_a_star.py  trajectory_follower.py  trajectory_planner.py
